# pixtimize

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  bun.lockb  nixpacks.toml  package.json  tsconfig.json
.cursor/skills/pixtimize-architecture/: SKILL.md
scripts/: patch-native-binary.sh
src/: app.rs  cache.rs  config.rs  error.rs  image_ops.rs  index.ts  lib.rs  limits.rs  main.rs  routes.rs  state.rs  storage.rs  transform.rs
src/api/: error_response.rs  health.rs  images.rs  mod.rs  response.rs
src/application/: cache_cleanup.rs  mod.rs  render_image.rs
src/domain/: cache_entry.rs  limits.rs  mod.rs  transform.rs
src/infrastructure/: mod.rs  redis.rs  s3.rs  scheduler.rs  vips.rs
src/libs/: environment.ts  redis.ts  s3.ts
src/services/: deleteCache.ts  renderImage.ts
src/utils/: getImagePath.ts  getPathTransformations.ts  getQueryTransformations.ts  mapTransfomations.ts
